Changelog
=========

0.2.3
-----
- removed description of table of contents schemaextension field

0.2.2
-----
- added IBibLayer BrowserLayer for schemaextensions
- locales


0.2.1
-----
- added to own svn
- added schemaextender for Products.CMFBibliographyAT bibliographicitem (table of contents)

0.1.6.4 (2010-02-16)
--------------------
- fixed feed names

0.1.6.3 (2010-01-26)
--------------------
- changed query string generation for OpenURL


0.1.6 (2010-01-25)
------------------
- changed meta resolver URL 

0.1.5 (2009-16-18)
------------------
- added UI for feed URL generation
- changed URL for 'Feed' action to @@feeds


0.1.4 (2009-16-17)
------------------
- improved feed integration and parameter handling
- (optional integration with Products.ATBiblioStyles (on the syndication
  level)


0.1.3 (2009-16-12)
------------------
- BibReferenceEntry adapter now respects a custom request parameter 'detail_view'
  providing additional information about bibliographic items.


0.1.2 (2009-16-12)
------------------
- added documentation action point to the @@atom.xml view

0.1.1 (2009-16-12)
------------------
- including a basic HTML view for syndicated bibliography entries

0.1.0 (2009-16-12)
------------------

- SFX server integration
- per reference-type specific identifiers
- added Products.fatsyndication and Products.basesyndication as new dependency
- added adapter for CMFBibAT related types for integration with base-/fatsyndication
