@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<object name="portal_workflow" meta_type="Plone Workflow Tool">
+ <bindings>
+   <type type_id="BibliographyFolder">
+     <bound-workflow workflow_id="(Default)" />
+   </type>
+   <type type_id="DuplicatesBibliographyFolder">
+     <bound-workflow workflow_id="(Default)" />
+   </type>
+   <type type_id="LargeBibliographyFolder">
+     <bound-workflow workflow_id="(Default)" />
+   </type>
+ </bindings>
+</object>
